@@ -25,6 +25,11 @@ class tx_oelib_Geocoding_Google implements \tx_oelib_Interface_GeocodingLookup
     const STATUS_INVALID_REQUEST = 'INVALID_REQUEST';
 
     /**
+     * @var string
+     */
+    const STATUS_OVER_QUERY_LIMIT = 'OVER_QUERY_LIMIT';
+
+    /**
      * the base URL of the Google Maps geo coding service
      *
      * @var string
@@ -48,6 +53,13 @@ class tx_oelib_Geocoding_Google implements \tx_oelib_Interface_GeocodingLookup
     const THROTTLING_IN_SECONDS = 1;
 
     /**
+     * the factor for the throttling when over the query limit
+     *
+     * @var int
+     */
+    const THROTTLING_BACK_AWAY_FACTORY = 4;
+
+    /**
      * @var int
      */
     const MAXIMUM_ATTEMPTS = 5;
@@ -57,7 +69,7 @@ class tx_oelib_Geocoding_Google implements \tx_oelib_Interface_GeocodingLookup
      *
      * @var float
      */
-    private static $lastGeocodingTimestamp = 0.0;
+    private $lastGeocodingTimestamp = 0.0;
 
     /**
      * The constructor. Do not call this constructor directly. Use getInstance() instead.
@@ -124,10 +136,11 @@ class tx_oelib_Geocoding_Google implements \tx_oelib_Interface_GeocodingLookup
         }
 
         $address = $geoObject->getGeoAddress();
+        $throttleTime = self::THROTTLING_IN_SECONDS;
 
         $attempts = 0;
         do {
-            $this->throttle();
+            $this->throttle($throttleTime);
             $lookupError = false;
 
             $retry = false;
@@ -141,6 +154,9 @@ class tx_oelib_Geocoding_Google implements \tx_oelib_Interface_GeocodingLookup
                 $addressIsInvalid = \in_array($status, [self::STATUS_ZERO_RESULTS, self::STATUS_INVALID_REQUEST], true);
                 if ($addressIsInvalid) {
                     break;
+                }
+                if ($status === self::STATUS_OVER_QUERY_LIMIT) {
+                    $throttleTime *= self::THROTTLING_BACK_AWAY_FACTORY;
                 }
             }
 
@@ -187,17 +203,19 @@ class tx_oelib_Geocoding_Google implements \tx_oelib_Interface_GeocodingLookup
      * Makes sure the necessary amount of time has passed since the last
      * geocoding request.
      *
+     * @param int $delay in seconds
+     *
      * @return void
      */
-    protected function throttle()
+    protected function throttle($delay)
     {
-        if (self::$lastGeocodingTimestamp > 0.0) {
-            $secondsSinceLastRequest = (microtime(true) - self::$lastGeocodingTimestamp);
-            if ($secondsSinceLastRequest < self::THROTTLING_IN_SECONDS) {
-                sleep((int)ceil(self::THROTTLING_IN_SECONDS - $secondsSinceLastRequest));
+        if ($this->lastGeocodingTimestamp > 0.0) {
+            $secondsSinceLastRequest = (microtime(true) - $this->lastGeocodingTimestamp);
+            if ($secondsSinceLastRequest < $delay) {
+                sleep((int)ceil($delay - $secondsSinceLastRequest));
             }
         }
 
-        self::$lastGeocodingTimestamp = microtime(true);
+        $this->lastGeocodingTimestamp = microtime(true);
     }
 }
